# ShellyMcShellface

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-24-shellymcshellface.md  2026-03-25-exit-and-autoport.md
docs/superpowers/specs/: 2026-03-24-shellymcshellface-design.md  2026-03-25-exit-and-autoport-design.md
src/: ansi.rs  event_buffer.rs  line_editor.rs  main.rs  pty.rs  server.rs  types.rs
src/frontend/: ansi.js  app.js  index.html
tests/frontend/: ansi.test.js
