[package]
name = "shellymcshellface"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ShellyMcShellface"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
webbrowser = "1"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
